tests/PhiCore/compile_failure/src/Container/StringView.construct_nullptr.fail.cpp
#include <Phi/Container/StringView.hpp>

int main()
{
    phi::StringView view(nullptr);
}
